--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.2",
     "@reduxjs/toolkit": "^2.2.5",
-    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^3.5.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
@@ -25,6 +28,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
+    "recharts": "^2.12.7",
     "redux-thunk": "^3.1.0",
     "tailwindcss": "^3.4.3"
   },
